--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="estilos/index.css">
     </head>
     <body>
-        <div>
+        <div class="conteudo-centralizado">
             <div class="titulo">Sistema para Restaurante</div>
-            <div>
-                <div class="item-menu">
+            <div class="menu">
+                <div class="item-menu-inicio">
                     <img width="50" height="50" src="imagens/boss.png">
                     <div>
                         <a href="proprietario/index.html">
@@ -17,7 +17,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="item-menu">
+                <div class="item-menu-inicio">
                     <img width="50" height="50" src="imagens/customer.png">
                     <div>
                         <a href="cliente/index.html">
