--- a/proprietario/index.html
+++ b/proprietario/index.html
@@ -6,34 +6,23 @@
         <link rel="stylesheet" href="../estilos/index.css">
     </head>
     <body>
-        <div>
+        <div class="conteudo-centralizado">
             <div class="titulo">Área de Proprietário</div>
-            <div>
-                <div class="item-menu">
-                    <div class="subtitulo">
-                        <img width="25" height="25" src="../imagens/item.png"> Itens
-                    </div>
-                    <div>        
-                        <a href="item/listar.html">
-                            Listar
-                        </a>
-                        <a href="item/cadastrar.html">
-                            Cadastrar
-                        </a>
-                    </div>
+            <div class="menu">
+                <div class="item-menu-proprietario">
+                    <a href="item/listar.html">
+                        <div class="subtitulo">
+                            <div class="item-subtitulo"><img width="25" height="25" src="../imagens/item.png"> </div>
+                            <div class="item-subtitulo">Itens</div>
+                        </div>
+                    </a>
                 </div>
-                <div class="item-menu">
-                    <div class="subtitulo">
-                        <img width="25" height="25" src="../imagens/menu.png"> Cardápios
-                    </div>  
-                    <div>                 
-                        <a href="cardapio/listar.html">
-                            Listar
-                        </a>
-                        <a href="cardapio/cadastrar.html">
-                            Cadastrar
-                        </a>
-                    </div> 
+                <div class="item-menu-proprietario">
+                    <a href="cardapio/listar.html">
+                        <div class="subtitulo">
+                            <img width="25" height="25" src="../imagens/menu.png"> Cardápios
+                        </div>  
+                    </a>
                 </div>
             </div>  
             <a class="voltar" href="../index.html">  
