--- a/proprietario/item/listar.html
+++ b/proprietario/item/listar.html
@@ -8,7 +8,8 @@
     <body>
         <div>
             <div class="titulo">Listar Itens</div>
-            <div>
+            <div class="conteudo">
+                <a href="cadastrar.html" class="cadastrar">Novo Item</a>
                 <div class="item-menu">
                     <a href="itens/item1.html">
                         X-burger
