--- a/proprietario/cardapio/cadastrar.html
+++ b/proprietario/cardapio/cadastrar.html
@@ -62,7 +62,7 @@
                     <input type="submit" value="Enviar">
                 </form>
             </div>
-            <a class="voltar" href="../index.html">  
+            <a class="voltar" href="listar.html">  
                 <p>Voltar</p>
             </a>
         </div>
