--- a/proprietario/cardapio/listar.html
+++ b/proprietario/cardapio/listar.html
@@ -8,7 +8,8 @@
     <body>
         <div>
             <div class="titulo">Listar Cardápios</div>
-            <div>
+            <div class="conteudo">
+                <a href="cadastrar.html" class="cadastrar">Novo Cardápio</a>
                 <div class="item-menu">
                     <a href="cardapios/cardapio1.html">
                         Cardápio Padrão
